# flashlib

./: .gitignore  README.md  pyproject.toml  scratch_ts.py
cake_exports/knn_build/: .gitignore  BENCHMARK_RESULTS.json  EXPORT_MANIFEST.json  EXPORT_PARITY_RESULTS.json  EXPORT_TIMING.json  README.md  RESULTS.md  VALIDATION.json  VALIDATION.md  pyproject.toml
cake_exports/knn_build/benchmarks/: benchmark.py  benchmark_exported_kernels.py  benchmark_shapes.py  shape_records.json
cake_exports/knn_build/src/flashlib_cake_knn_build/: __init__.py  _direct_plan.py  _dispatch_runtime.py  _dispatch_shapes.json  _entrypoints.json  _launch_plan.py  _routes.json  _row_norm.cu  _row_norm.py  interface.py  kernels.py  manifest.json  tvm_ffi.py
cake_exports/knn_build/src/flashlib_cake_knn_build/_dispatch/: knn_build_build_k10_lowfloor_4757_v1.py  knn_build_build_k10_lowfloor_ad64_v2.py  knn_build_build_k96_d64_c13e_v1.py  knn_build_build_lowfloor_2c1c_v3.py  knn_build_build_lowfloor_d43e_v1.py  knn_build_build_lowfloor_residual_b3ec_v1.py  knn_build_buildbucket_dbd7_lowfloor_v1.py  knn_build_buildbucket_residual_lowk_6bc3_v1.py  knn_build_common_d256_q1024_56f3_v1.py  knn_build_common_d768_build_eeff_m64split_v1.py  knn_build_common_d_1438_rag_d64_m128_v1.py  knn_build_common_d_56f3_build_d256_q1024_v1.py  knn_build_common_d_56f3_build_highd_v1.py  knn_build_common_d_5e7f_rag_d64_d256_v1.py  knn_build_common_d_5e7f_rag_d64_repair_v1.py  knn_build_common_d_5e7f_rag_highd_v1.py  knn_build_common_d_5e7f_search_d256_v1.py  knn_build_common_d_eeff_search_d768_v1.py  knn_build_common_d_generic_fallback_v1.py  knn_build_d128_rag_q128_k10_df0f_warpmerge_v1.py  knn_build_d128_rag_q16m250_df0f_v1.py  knn_build_d192_tile_search_b10e_v1.py  knn_build_d256_tail_tiles_b21e_v1.py  knn_build_d320_blockk_b21e_v1.py  knn_build_d320_ownership_topology_9150_v1.py  knn_build_d320_producer_recurrence_search_f556_v1.py  knn_build_d64_build_aa88_v1.py  knn_build_d64_build_aa88_v2.py  knn_build_d64_lowk_lowfloor_84bb_v1.py  knn_build_d64_q4096_c271_prodaxis_v1.py  knn_build_d64_q4096_c271_twostage_v1.py  knn_build_dim_midk_73a9_v1.py  knn_build_dim_midk_bad5_fp16split_v1.py  knn_build_dim_midk_bad5_k24k28_v1.py  knn_build_dim_midk_bad5_k64split8_v1.py  knn_build_dim_midk_bad5_midkcleanup_v1.py  knn_build_dim_midk_df2f_v1.py  knn_build_dim_midk_f8c3_q4096k64split_v1.py  knn_build_dispatch_066c_b8c7_69d6_full82_v1.py  knn_build_dispatch_066c_b8c7_69d6_q4_portfolio_full82_v1.py  (+219 more)
cake_exports/knn_build/src/flashlib_cake_knn_build/cuda/: dispatch_kernel_0000.cu  dispatch_kernel_0001.cu  dispatch_kernel_0002.cu  dispatch_kernel_0003.cu  dispatch_kernel_0004.cu  dispatch_kernel_0006.cu  dispatch_kernel_0007.cu  dispatch_kernel_0008.cu  dispatch_kernel_0009.cu  dispatch_kernel_0010.cu  dispatch_kernel_0011.cu  dispatch_kernel_0013.cu  dispatch_kernel_0014.cu  dispatch_kernel_0015.cu  dispatch_kernel_0016.cu  dispatch_kernel_0017.cu  dispatch_kernel_0018.cu  dispatch_kernel_0019.cu  dispatch_kernel_0020.cu  (+200 more)
cake_exports/knn_build/tests/: test_correctness.py  test_exported_kernels.py
(+1204 files in other folders)
