[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "flashlib"
version = "0.2.0"
description = "High-performance ML primitives, applications, and informative cost API — Triton + CuteDSL kernels for NVIDIA GPUs."
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Shuo Yang", email = "andy_yang@berkeley.edu"},
]
maintainers = [
    {name = "Shuo Yang", email = "andy_yang@berkeley.edu"},
]
keywords = ["triton", "cutedsl", "gpu", "machine-learning", "kmeans", "knn", "pca", "dbscan", "hdbscan", "umap", "cuml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "torch>=2.0",
    "triton>=3.6",
    "numpy",
    "numba",                # hdbscan tree-condensation helpers (CPU-side)
    "nvidia-cutlass-dsl",   # CuteDSL backends for kmeans/knn/dbscan/hdbscan/umap/spectral_clustering/polar/orthonormalize
    "tqdm",                 # progress bar in kmeans Lloyd iterations
]

[project.optional-dependencies]
dev = ["pytest>=7", "scikit-learn>=1.5,<1.8", "tqdm"]
bench = [
    "scikit-learn>=1.5,<1.8",
    "tqdm",
    "matplotlib",
    # vs-cuML comparison benchmarks (optional, RAPIDS wheels from pypi.nvidia.com):
    #   pip install --extra-index-url https://pypi.nvidia.com cuml-cu13 cudf-cu13 cupy-cuda13x
    # See benchmarks/vs_cuml/README.md for the supported version matrix.
]

[project.urls]
Homepage = "https://flashml-org.github.io/"
Documentation = "https://flashml-org.github.io/"
Repository = "https://github.com/FlashML-org/flashlib"
Issues = "https://github.com/FlashML-org/flashlib/issues"

[tool.setuptools.packages.find]
include = ["flashlib*"]
